--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy</title>
+ <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class = "container">
+        <h1>Adaptive Product Titles Privacy Policy</h1>
+    <p>
+      Adaptive Product Title app provides an easy way to change the titles of your
+      products on the home page. This Privacy
+      Policy describes how personal information is collected, used, and shared
+      when you install or use the App in connection with your Shopify-supported
+      store.
+    </p>
+    <h3>Personal Information Adaptive Product Titles collects</h3>
+    <p>
+      When you install Adaptive Product Titles, we are automatically able to access
+      certain types of information from your Shopify account:
+
+      <ul>
+        <li>Shopify domain</li>
+        <li>Shopify token</li>
+        <li>Store's status (online, offline, etc)</li>
+        <li>Store's theme</li>
+        <li>Store's currency</li>
+        <li>Store's country</li>
+        <li>Store's email</li>
+        <li>Store owner's name</li>
+        <li>Store owner's email</li>
+      </ul>
+    </p>
+    <h3>How do we use your personal information?</h3>
+    <p>
+      We use the personal information we collect from you and your customers in
+      order to provide a better service and to operate Adaptive Product Titles 
+      better. Additionally, we use this personal information to: Communicate
+      with you; Optimize or improve the App; and Provide you with information
+      or advertising relating to our products or services.
+    </p>
+  
+    <h3>Your Rights</h3>
+    <p>
+      You have the right to access personal information we hold about you and to
+      ask that your personal information be corrected, updated, or deleted. If
+      you would like to exercise this right, please contact us through the
+      contact information below.
+    </p>
+    <p>
+      Additionally, if you are a European resident we note that we are
+      processing your information in order to fulfill contracts we might have
+      with you (for example if you make an order through the Site), or otherwise
+      to pursue our legitimate business interests listed above. Additionally,
+      please note that your information will be transferred outside of Europe,
+      including Canada and the United States.
+    </p>
+    <h3>Data Retention</h3>
+    <p>
+      We currently don't retain any data about you or your store that wasn't
+      describe above.
+    </p>
+    <h3>Changes</h3>
+    <p>
+      We may update this privacy policy from time to time in order to reflect,
+      for example, changes to our practices or for other operational, legal or
+      regulatory reasons.
+    </p>
+    <h3>Contact Us</h3>
+    <p>
+      For more information about our privacy practices, if you have questions,
+      or if you would like to make a complaint, please contact us by e-mail at
+      <a href="mailto:xyzmediadeveloper@gmail.com">xyzmediadeveloper@gmail.com</a>
+    </p>
+    </div>        
+</body>
+</html>
